--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <script src="https://resource.mapray.com/mapray-js/v0.9.5/mapray.min.js"></script>
 <script>
      // Set Access Token for mapray cloud
-       var accessToken = "";
+       var accessToken = "MTcyNTE4NjEyN2U3NDVmMmRhMjJmZWI1YmJlMjI1";
 
        // For Image tiles
        var imageProvider = new mapray.StandardImageProvider( { url: "https://cyberjapandata.gsi.go.jp/xyz/seamlessphoto/", format: "jpg", min_level: 2, max_level: 18 } );
